@@ -34,6 +34,12 @@ Stalker Changes
   prevent two scheduling process to override each other. It also stores the
   last schedule message and the last schedule date and the id of the user who
   has done the scheduling.
+* **New:** The Task Dependency relation is now using an Association Object
+  instead of just a Secondary Table. And the Task.depends and Task.dependent_of
+  attributes are now association_proxies. Also added extra parameters like
+  ``dependency_type``, ``gap`` and ``gap_model`` to the dependency relation.
+  So all of the dependency relations are now able to hold those extra
+  information.
 
 0.2.4
 =====
